<resources>
    <string name="app_name">viGUD</string>
    <string name="welcome_to">Bienvenido a</string>
    <string name="city_name">Viña del Mar</string>
    <string name="slide_1_text">A través de ViGud podrás explorar laciudad como nunca antes, vinculándote a puntos de valor cultural y turístico de forma inteligente e interactiva.</string>
    <string name="slide_2_title">C Ó N E C T A T E</string>
    <string name="slide_2_text">En tiempo real con eventos, carteleras y notificaciones culturales</string>
    <string name="slide_3_title">A C C E D E</string>
    <string name="slide_3_text">A contenidos digitales exclusivos para disfrutar al aire libre</string>
    <string name="slide_4_title">D E S C U B R E</string>
    <string name="slide_4_text">Nuevos lugare y experiencias maravillosas en Viña del Mar</string>
    <string name="slide_5_title">I N T E R A C T Ú A</string>
    <string name="slide_5_text">Con los terminales inteligentes, juega, aprende y disfruta</string>

    <string name="login_text">BIENVENIDO A VIÑA DEL MAR</string>

    <string name="login_button">INGRESAR</string>
    <string name="reister_button">REGISTRAR</string>
    <string name="register_mail_edit">email</string>
    <string name="register_contrasena_edit">contraseña</string>
    <string name="register_recontrasena_edit">repita contraseña</string>
    <string name="forgot_password">¿Olvido contraseña?</string>

    <string name="social_facebook">FACEBOOK</string>
    <string name="social_google">GOOGLE</string>

    <string name="descript_close_button">close button</string>

    <string name="descript_back_button">back button</string>
    <string name="descript_config_logo">config logo</string>
    <string name="title_config">CONFIGURACIÓN</string>
    <string name="enlace_automatico_title">ENLACE AUTOMÁTICO</string>
    <string name="enlace_automatico_descript">Vincúlate instantáneamente a los terminales que estén a tu alcance.</string>
    <string name="alerta_georeferencia_title">NOTIFICACIONES</string>
    <string name="alerta_georeferencia_decript">Recibe notificaciones georeferenciadas mientras te mueves por la ciudad.</string>


    <string name="descript_cartelera_logo">cartelera logo</string>
    <string name="title_cartelera">CARTELERA</string>

    <string name="descript_event_img">img evento</string>

    <!-- MODO EJEMPLO EVENTO -->
    <string name="title_evento">PABLO SIMONETTI</string>
    <string name="detail_evento">18 NOV / 9PM / $5.000 </string>
    <string name="location_evento">CENTRO CULTURAL PALACIO RIOJA</string>
    <string name="desc_evento">El destacado escritor chileno Pablo Simonetti presentará en el Centro Cultural Palacio Rioja en Viña del Mar su última novela titulada "Desastres naturales", un libro que narra la historia de Marco, el personaje principal, un hombre proveniente de una familia conseradora que presenta una mirada retrospectia hacia la precaria relación que sostuvo con su padre a lo largo de su infancia, adolecencia y madurez.</string>

    <string name="btn_agendar">AGENDAR</string>
    <string name="btn_comprar_entrada">COMPRAR ENTRADA</string>
    <string name="btn_ir">IR</string>

    <string name="title_puntos_vigud">PUNTOS VIGUD</string>

    <string name="loading">CARGANDO...</string>

    <string name="dialog_gps_title">GPS para VIGUD</string>
    <string name="dialog_gps_message">Esta aplicación requiere de la localización de tu dispositivo para ofrecerte alertas personalizadas. Esto te permitirá experimentar integramente la aplicación.</string>
    <string name="dialog_gps_accept">Aceptar</string>
    <string name="dialog_gps_cancel">Cancelar</string>

    <string name="switch_notification">switch_notification</string>

    <string name="preference_file_key">config_app</string>

    <string name="title_palacio_rioja">PALACIO RIOJA</string>
    <string name="descript_palacio_rioja">Museo de época, que da testimonio de la arquitectura y mobiliario vigentes en Chile a comienzos del siglo XX, así como de estilo propio de ricos comerciantes de esos años. Su construcción es de estilo neoclásico francés, fue la residencia de la familia Rioja.</string>
    <string name="menu_desc">*</string>
    <string name="title_descubrir">DESCUBRIR</string>
</resources>

