<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context="com.example.estudiante.vigud.PrincipalActivity">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_extrabold"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="192dp"
        android:layout_marginStart="28dp"
        android:width="@dimen/button_width"
        android:height="@dimen/button_height"
        android:background="@drawable/button_primary"
        android:fontFamily="@font/metropolis_semibold"
        android:onClick="login"
        android:text="@string/login_button"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        android:textSize="@dimen/text_button_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="192dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/button_secundary"
        android:fontFamily="@font/metropolis_semibold"
        android:onClick="register"
        android:text="@string/reister_button"
        android:textSize="@dimen/text_button_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
