<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.estudiante.vigud.PuntoVigudActivity"
    android:background="@drawable/bg_cartelera">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/descript_cartelera_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_puntos_vigud_minldpi" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/metropolis_semibold"
        android:text="@string/title_puntos_vigud"
        android:textColor="@color/blank"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/back_button"
        android:contentDescription="@string/descript_close_button"
        android:onClick="goToBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="199dp"
        android:layout_height="68dp"
        android:layout_marginBottom="272dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/metropolis_extrabold"
        android:text="@string/title_palacio_rioja"
        android:textAlignment="center"
        android:textColor="@color/blank"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="317dp"
        android:layout_height="128dp"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/walkwayultrabold"
        android:text="@string/descript_palacio_rioja"
        android:textAlignment="center"
        android:textColor="@color/blank"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="69dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/btn_ir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/metropolis_semibold"
        android:text="@string/btn_ir"
        android:textColor="@color/blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="108dp"
        android:background="@drawable/btn_material_exclusivo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="108dp"
        android:background="@drawable/btn_palmario_elena"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="60dp"
        android:layout_height="22dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/metropolis_semibold"
        android:text="MATERIAL EXCLUSIVO"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="60dp"
        android:layout_height="22dp"
        android:layout_marginEnd="108dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/metropolis_semibold"
        android:text="JUEGOS VIGUD"
        android:textAlignment="center"
        android:textColor="@color/blank"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton10" />

    <ImageButton
        android:id="@+id/btn_temperatura"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/thermometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/metropolis_semibold"
        android:textColor="@color/blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
